[FIX] website_sale_comparison: increase `collapse` `z-index`
This commit increase the `z-index` property of the `collapse` element
within the comparison bottom bar when open.

Prior to this commit, we set the `z-index` to `3`, which is below the `4`
of the floating bar. While this solved an issue on desktop, it introduced
a new one on mobile, where the collapse would unfold UNDER the floating
bar.

With this commit, we change the `z-index` when the collapse is open so
it is greater than the floating bar one.

task-5086473

closes odoo/odoo#227085

X-original-commit: cc2104ecd5fcaffc0b2ab6d5cd3dd977f69c9473

--- a/addons/website_sale_comparison/static/src/scss/website_sale_comparison.scss
+++ b/addons/website_sale_comparison/static/src/scss/website_sale_comparison.scss
@@ -94,6 +94,11 @@
 }
 
 .o_wsale_comparison_bottom_bar {
+    z-index: var(--o-wsale-comparison-bottom-bar-z-index, 3);
+
+    &:where(:has(.collapsing, .collapse.show)) {
+        --o-wsale-comparison-bottom-bar-z-index: 4;
+    }
 
     box-shadow: 0px -12px 32px rgba($black, .175);
 
